test_programs/compile_failure/comptime_closure_callstack/src/main.nr
fn main() {
    comptime {
        let z = || assert(false);
        let y = || z();
        let x = || y();
        x()
    }
}
